--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,11 @@
   z-index: -1;
 }
 
+#main-nav{
+height: 60vh;
+width: 100%;
+background-image: url("./images/breakingbad.jpg");
+background-position: 100%;
+background-size: 140%;
+}
+
