--- a/src/App.css
+++ b/src/App.css
@@ -58,9 +58,23 @@ border-top-right-radius: 15px;
 #logo{
   color: green;
   display: inline-flex;
+  padding-top: 2vh;
+  padding-left: 2vw;
+  font-size: 24px;
+  background-color: wheat;
 }
 
 #nav{
 display: inline-flex;
 flex-direction: row;
+border: black solid;
+height: 6vh;
+width: 30vw;
+margin-left: 40vw;
+margin-top: 2vh;
+}
+
+#searchSpace{
+  display: flex;
+  flex-direction: row;
 }
