--- a/src/App.css
+++ b/src/App.css
@@ -82,11 +82,13 @@ margin-top: 2vh;
 }
 
 #submit{
-  width: 10vw;
-  height: 2px;
+ height: 100%;
+ background-color: white;
+ 
 }
 
 #search{
-  width: 15vw;
+  width: 30vw;
+  height: 4vh;
 
 }
