--- a/src/App.css
+++ b/src/App.css
@@ -82,11 +82,20 @@ img{
 font-family: 'Knewave', cursive;
 display: inline-flex;
 flex-direction: row;
-border: black solid;
 height: 6vh;
 width: 30vw;
-margin-left: 40vw;
-margin-top: 2vh;
+margin-left: 50vw;
+margin-top: 1.5vh;
+color: yellow;
+}
+
+#navHome{
+ color: yellow;
+ font-family: 'Knewave', cursive;
+font-size: 30px;
+font-weight: 900;
+margin-right: 2vw;
+
 }
 
 #searchSpace{
