--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,10 @@ margin-right: 2vw;
   background-color: tan;
 }
 
+#navCategories:hover{
+  background-color: tan;
+}
+
 #searchSpace{
   display: flex;
   flex-direction: row;
