--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,7 @@ margin-right: 2vw;
 
 #navAbout{
   color: black;
+  background-color: tan;
   font-family: 'Knewave', cursive;
  font-size: 30px;
  font-weight: 900;
