--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,7 @@ margin-right: 2vw;
 
 #navCategories{
   color: black;
+  background-color: tan;
  font-family: 'Knewave', cursive;
 font-size: 30px;
 font-weight: 900;
