changed nav home background

--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,7 @@ color: yellow;
 
 #navHome{
  color: black;
+ background-color: tan;
  font-family: 'Knewave', cursive;
 font-size: 30px;
 font-weight: 900;
