--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,7 @@ margin-right: 2vw;
   height: 100%;
   background-color: tan;
  margin-right: 0;
- border-color: steelblue;
+ border-color: s;
  color: black;
 }
 
