--- a/src/App.css
+++ b/src/App.css
@@ -153,7 +153,7 @@ margin-right: 2vw;
 
 #submit:hover{
   height: 100%;
-  background-color: tan;
+  background-color: green;
  margin-right: 0;
  border-color: s;
  color: black;
