added transparent logo

--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ border-top-right-radius: 15px;
 #logo{
   height: 80px;
   width: 200px;
-  background-image: url("./images/quickshow.jpg");
+  background-image: url("./images/5cc5af3c-5bd0-4d5c-9a77-a624d27e9dd7_200x200.png");
   background-position: 100%;
   background-size: 100%;
 }
