--- a/src/App.css
+++ b/src/App.css
@@ -174,7 +174,8 @@ background-color: black;
 
 #hotSpot{
   color: white;
-  height: 10vh;
+  margin-bottom: 0;
+  height: 8vh;
   text-align: center;
   font-family: 'Dancing Script', cursive;
 }
@@ -201,6 +202,8 @@ background-color: black;
   width: 100%;
   height: 25vh;
   background-color: white;
+  margin-top: 0;
+  margin-bottom: 26vh;
 }
 
 #network{
