created a set timoout for the popup to appear after 2 seconds

--- a/src/App.css
+++ b/src/App.css
@@ -217,7 +217,7 @@ background-color: black;
   color: silver;
   text-align: center;
   font-size: 40px;
-  visibility: visible;
+  visibility: hidden;
 }
 
 #network{
