--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,9 @@
+/* first import the font which is dancing script */
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script|Knewave&display=swap');
 
+/* everything starts with a text align at center for this application */
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -28,15 +19,6 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 /*#fullPage{
@@ -264,6 +246,7 @@ flex-direction: row;
   flex-direction: row;
 }
 
+/* media queries for differing screen sizes */
 @media only screen and (min-width: 1280px){
 
 #navHome{
